# ArcFlow

./: .gitignore  CODEBASE.md  ENVIRONMENT_QUICKREF.md  LOCAL_DEV_GETTINGSTARTED.md  README.md  TODO.md  create_dev_venv.ps1  create_test_venv.ps1  lakegen-0.1.1-py3-none-any.whl  lakegen-0.1.8-py3-none-any.whl  main.py  pipeline_config.py  pipeline_config.yml  pyproject.toml  pytest.ini  table_registry.yml  test_ref_files.py
.github/: copilot-instructions.md
TBD/: DEVELOPMENT.md  FABRIC_DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEV.md  QUICKSTART.md  QUICK_REFERENCE.md
examples/: arcflow_example..ipynb  pipeline_config.py  pipeline_config.yml  pipeline_config_dev.py
src/arcflow/: __init__.py  config.py  controller.py  lock.py  main.py  models.py  yaml_loader.py
src/arcflow/core/: __init__.py  spark_configurator.py  spark_session.py  stage_chain_listener.py  stream_manager.py
src/arcflow/pipelines/: __init__.py  dimension_pipeline.py  zone_pipeline.py
src/arcflow/readers/: __init__.py  base_reader.py  eventhub_reader.py  json_reader.py  kafka_reader.py  parquet_reader.py  reader_factory.py
src/arcflow/transformations/: __init__.py  common.py  dimension_transforms.py  zone_transforms.py
src/arcflow/utils/: __init__.py  endpoint_validator.py  table_utils.py
src/arcflow/writers/: __init__.py  base_writer.py  delta_writer.py  writer_factory.py
tests/: test_delta_writer.py  test_event_driven_pipeline.py  test_lock.py  test_multi_target.py  test_stage_chain_listener.py  test_upstream_chaining.py  test_yaml_loader.py
