[project]
name = "arcflow"
version = "0.1.1"
description = "Zone-agnostic PySpark ELT framework for Microsoft Fabric - architect scalable data flows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "delta-spark>=3.2,<3.3",
    "pyspark>=3.5,<3.6",
    "tenacity==9.1.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arcflow"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
